--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -144,4 +144,7 @@ h1 {
     padding-top: 1rem;
     text-align: center; }
 
+textarea[name=code-area] {
+  background: #ffb81d; }
+
 /*# sourceMappingURL=docs.css.map */
