--- a/docs/_includes/svg/logotype.html
+++ b/docs/_includes/svg/logotype.html
@@ -1,7 +1,7 @@
 <h3>NYPL Logo</h3>
 <div class="nypl-toolkit-example">
   <span class="nypl-example-text">Example</span>
-  <!-- lets put the raw svg include here --->
+  <!-- lets put the raw svg include here -->
 {% include rawSvg/logoLion.icon.svg %}
 </div>
 <textarea id="nypl-logoArea" name="code-area" rows="8" cols="40" class="xml" style="border: 1px dotted red;">svg</textarea>
@@ -13,6 +13,7 @@
 </code></pre>
 <pre><code class="xml">
 <!-- insert encodedSvg -->
+<!-- sample svg code -->
 </code></pre>
 
 <script type="text/javascript">
