:meat_on_bone: added a class to the icon. but i looks like we can eliminate two of the classes.

--- a/docs/_includes/svg/logotype.html
+++ b/docs/_includes/svg/logotype.html
@@ -4,7 +4,7 @@
   <!-- lets put the raw svg include here -->
 {% include rawSvg/logoLion.icon.svg %}
 </div>
-<textarea id="nypl-logoArea" name="code-area" rows="8" cols="40" class="xml" style="border: 1px dotted red;">svg</textarea>
+<textarea id="nypl-logoArea" name="code-area" rows="8" cols="40" class="xml">svg</textarea>
 <pre>
 <code class="scss">
 .nypl-icon {
