:meat_on_bone: mainly futzing w/ the css, comments etc.

--- a/docs/_includes/svg/logotype.html
+++ b/docs/_includes/svg/logotype.html
@@ -1,4 +1,5 @@
 <h3>NYPL Logo</h3>
+<p>The NYPL branding / logos have special use cases. You'll probably have no need to modify the logo other than changing its size. We can use either the <em>logo mark</em> or the <em>logo type</em>. This can be achieved by using <code>css</code> to hide either of these two components of the logo mark.</p>
 <div class="nypl-toolkit-example">
   <span class="nypl-example-text">Example</span>
   <!-- lets put the raw svg include here -->
@@ -7,9 +8,9 @@
 <textarea id="nypl-logoArea" name="code-area" rows="8" cols="40" class="xml">svg</textarea>
 <pre>
 <code class="scss">
-.nypl-icon {
-@include nypl-icon($height: 10em, $width: 10em);
-}
+    .nypl-icon {
+      @include nypl-icon($height: 10em, $width: 10em);
+    }
 </code></pre>
 <pre><code class="xml">
 <!-- insert encodedSvg -->
@@ -17,7 +18,7 @@
 </code></pre>
 
 <script type="text/javascript">
-// TODO: move this whole thing to its own file and let all the other icons use it
+// TODO: make this generic enough so the script will crawl down all the nodes and place their values into a the right containers
 const encodedSvg = document.getElementById('nyplLogoMain').outerHTML;
 //console.log(encodedSvg);
 // put the value of the svg into the text
