:meat_on_bone: added in icons that are actually being used on production. missing a few here and there. butfor the most part its complete

--- a/sass/docs.scss
+++ b/sass/docs.scss
@@ -6,6 +6,7 @@
   color: $highlight-color; // overriding highlightjs which has low contrast in css class highlighting
 }
 
+// Simple class to style icons found in the docs section only.
 .doc-icon {
   width: 10rem;
 }
